EC ERROR
 => ERROR [build 4/7] RUN npm install                                                                                                                                                       16.0s
------
 > [build 4/7] RUN npm install:
0.912 npm error code ENOENT
0.913 npm error syscall open
0.914 npm error path /app/package.json
0.914 npm error errno -2
0.914 npm error enoent Could not read package.json: Error: ENOENT: no such file or directory, open '/app/package.json'
0.915 npm error enoent This is related to npm not being able to find a file.
0.915 npm error enoent






sudo npx @eventcatalog/create-eventcatalog@latest my-catalog

export PATH="/usr/local/nodejs/bin:$PATH"

sudo ln -s /usr/local/nodejs/bin/node /usr/local/bin/node
sudo ln -s /usr/local/nodejs/bin/npm /usr/local/bin/npm
sudo ln -s /usr/local/nodejs/bin/npx /usr/local/bin/npx

sudo npx @eventcatalog/create-eventcatalog@latest my-catalog
Need to install the following packages:
  @eventcatalog/create-eventcatalog@latest
Ok to proceed? (y) y
npm WARN EBADENGINE Unsupported engine {
npm WARN EBADENGINE   package: 'signal-exit@4.1.0',
npm WARN EBADENGINE   required: { node: '>=14' },
npm WARN EBADENGINE   current: { node: 'v12.22.9', npm: '8.5.1' }
npm WARN EBADENGINE }
/usr/local/lib/node_modules/@eventcatalog/create-eventcatalog/dist/index.js:15222
  #fillNegs() {
           ^

SyntaxError: Unexpected token '('
    at wrapSafe (internal/modules/cjs/loader.js:915:16)
    at Module._compile (internal/modules/cjs/loader.js:963:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1027:10)
    at Module.load (internal/modules/cjs/loader.js:863:32)
    at Function.Module._load (internal/modules/cjs/loader.js:708:14)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:60:12)
    at internal/main/run_main_module.js:17:47

wget -q -O - https://apt.grafana.com/gpg.key | gpg --dearmor | sudo tee /usr/share/keyrings/grafana.key > /dev/null

gpg: не найдено данных формата OpenPGP.

curl -s https://apt.grafana.com/gpg.key | gpg --dearmor > /etc/apt/keyrings/grafana.gpg
echo "deb [signed-by=/etc/apt/keyrings/grafana.gpg] https://apt.grafana.com stable main" | sudo tee /etc/apt/sources.list.d/grafana.list
sudo apt update



wget -q -O /tmp/grafana.gpg.key https://apt.grafana.com/gpg.key
gpg --dearmor /tmp/grafana.gpg.key > /etc/apt/keyrings/grafana.gpg
rm /tmp/grafana.gpg.key  # Опционально: удалить временный файл
echo "deb [signed-by=/etc/apt/keyrings/grafana.gpg] https://apt.grafana.com stable main" | sudo tee /etc/apt/sources.list.d/grafana.list
sudo apt update



E: Не удалось получить https://apt.grafana.com/dists/stable/InRelease  403  Access Denied [IP: 146.75.122.217 443]
E: Репозиторий «https://apt.grafana.com stable InRelease» больше не подписан.

sudo nano /etc/apt/sources.list.d/nodesource.list

npm error Missing script: "generate"
npm error
npm error To see a list of scripts, run:
npm error   npm run
npm error A complete log of this run can be found in: /root/.npm/_logs/2025-03-12T19_23_24_328Z-debug-0.log

# Добавьте NodeSource репозиторий для Node.js 20
curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -

# Установите Node.js и npm
sudo apt install -y nodejs
============
udo npx npm i @eventcatalog/create-eventcatalog .
Need to install the following packages:
  npm
Ok to proceed? (y) y
npm WARN EBADENGINE Unsupported engine {
npm WARN EBADENGINE   package: 'npm@11.2.0',
npm WARN EBADENGINE   required: { node: '^20.17.0 || >=22.9.0' },
npm WARN EBADENGINE   current: { node: 'v12.22.9', npm: '8.5.1' }
npm WARN EBADENGINE }
glob error [Error: EACCES: permission denied, scandir '/root/.npm/_logs'] {
  errno: -13,
  code: 'EACCES',
  syscall: 'scandir',
  path: '/root/.npm/_logs'
}
npm WARN logfile Error: EACCES: permission denied, scandir '/root/.npm/_logs'
npm WARN logfile  error cleaning log files [Error: EACCES: permission denied, scandir '/root/.npm/_logs'] {
npm WARN logfile   errno: -13,
npm WARN logfile   code: 'EACCES',
npm WARN logfile   syscall: 'scandir',
npm WARN logfile   path: '/root/.npm/_logs'
npm WARN logfile }
npm ERR! code EACCES
npm ERR! syscall mkdir
npm ERR! path /root/.npm/_cacache/tmp
npm ERR! errno -13
npm ERR! 
npm ERR! Your cache folder contains root-owned files, due to a bug in
npm ERR! previous versions of npm which has since been addressed.
npm ERR! 
npm ERR! To permanently fix this problem, please run:
npm ERR!   sudo chown -R 1000:1000 "/root/.npm"

npm ERR! A complete log of this run can be found in:
======================
docker run -p 3000:3000 -p 80:80 eventcatalog-kuber
npm error Missing script: "generate"
npm error
npm error To see a list of scripts, run:
npm error   npm run
npm error A complete log of this run can be found in: /root/.npm/_logs/2025-03-12T18_47_50_807Z-debug-0.log
===========================
npm ERR! code E404
npm ERR! 404 Not Found - GET https://registry.npmjs.org/eventcatalog - Not found
npm ERR! 404 
npm ERR! 404  'eventcatalog@latest' is not in this registry.
npm ERR! 404 You should bug the author to publish it (or use the name yourself!)
npm ERR! 404 
npm ERR! 404 Note that you can also install from a
npm ERR! 404 tarball, folder, http url, or git url.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/fanta/.npm/_logs/2025-03-12T18_30_27_613Z-debug-0.log
